[package]
name = "wow-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]} 
jsonwebtoken = "9.3.1"
reqwest = {version = "0.12.22", features = ["blocking", "json"]}
anyhow = "1.0.98"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.6.1", features = ["postgres", "deadpool"] }
diesel_json = "0.2.1"
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
bcrypt = "0.17"
