[package]
name = "wow-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]} 
jsonwebtoken = "9.3.1"
reqwest = {version = "0.12.22", features = ["json"]}
anyhow = "1.0.98"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.6.1", features = ["postgres", "deadpool"] }
diesel_json = "0.2.1"
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
bcrypt = "0.17"
redis = { version = "0.32", features = ["tokio-comp", "aio"] }
bb8 = "0.9"
bb8-redis = "0.24"
rand = "0.9.2"
lettre = "0.11.17"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
validator = { version = "0.20.0", features = ["derive"]}
axum-valid = "0.24.0"
tera = "1.20.0"
tokio-retry = "0.3.0"
